# polygon-decomposition

./: .gitignore  CMakeLists.txt  README.md
src/impl/: dcel_polygon2d.hpp  debug_utils.hpp  decomposition.hpp  geom_utils.hpp  make_monotone.hpp  polygon2d.hpp  triangulate.hpp  triangulate_monotone.hpp
tests/: CMakeLists.txt  make_monotone_tests.cpp  performance_tests.cpp  resolve_intersections_tests.cpp  triangulate_monotone_tests.cpp  triangulate_tests.cpp  utils_tests.cpp
tests/test_utils/: decomposition_utils.cpp  decomposition_utils.h  decomposition_utils.hpp  triangulate_utils.cpp  triangulate_utils.h
triangulation/: CMakeLists.txt  triangulation.pc.in
triangulation/include/: triangulation.h  triangulation_base_geometry.h
triangulation/src/: dcel_polygon2d.cpp  dcel_polygon2d.h  debug_utils.h  decompose_to_monotones.cpp  decompose_to_monotones.h  geom_utils.cpp  geom_utils.h  polygon2d.cpp  polygon2d.h  resolve_intersections.cpp  resolve_intersections.h  segments_on_y_sweep_line.cpp  segments_on_y_sweep_line.h  triangulate_monotone.cpp  triangulate_monotone.h  triangulation.cpp
